# mane

./: CHANGELOG.md  Main.hs  README.md  cabal.project  default.nix  mane.cabal
.github/workflows/: haskell.yml
app/: Main.hs
src/: Mane.hs
