cabal-version:       >=1.10
name:                mane
version:             0.1.0.0
synopsis:            VELDT Programmer
description:         VELDT Programmer
bug-reports:         https://github.com/standardsemiconductor/mane/issues
license:             MIT
license-file:        LICENSE
author:              dopamane
maintainer:          dwc1295@gmail.com
copyright:           (c) 2020 Standard Semiconductor
category:            System
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md

source-repository head
                  type:     git
                  location: https://github.com/standardsemiconductor/mane
                     
executable mane
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base,
                       bytestring,
                       vector,
                       usb,
                       optparse-applicative,
                       ftdi
  default-language:    Haskell2010
