cabal-version:       >=1.10
name:                mane
version:             0.1.0.0
synopsis:            VELDT Programmer
description:         VELDT Programmer
bug-reports:         https://github.com/standardsemiconductor/mane/issues
license:             MIT
license-file:        LICENSE
author:              David Cox
maintainer:          David Cox <standardsemiconductor@gmail.com>
copyright:           (c) 2020-2024 David Cox
category:            System, Hardware
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md

source-repository head
                  type:     git
                  location: https://github.com/standardsemiconductor/mane

library
  exposed-modules:     Mane
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base                 >= 4.12 && < 4.21,
                       bytestring           >= 0.10 && < 0.13,
                       ftdi                 >= 0.3  && < 0.4,
                       mtl                  >= 2.2  && < 2.4,
                       usb                  >= 1.3  && < 1.4,
                       vector               >= 0.12 && < 0.14
          
  ghc-options:         -Wall
  default-extensions:  CPP
                       FlexibleContexts
                       GeneralizedNewtypeDeriving
                       LambdaCase
                     
executable mane
  main-is:             Main.hs
  hs-source-dirs:      app
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:       base,
                       mane,
                       optparse-applicative >= 0.16 && < 0.19,
                       usb
  default-extensions:  LambdaCase

